syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "cachebase/internal/proto/gen";

// CacheService defines caching service. 
service CacheService {
    rpc Get (GetRequest) returns (GetResponse);

    rpc Set (SetRequest) returns (SetResponse);

    rpc Delete (DeleteRequest) returns (DeleteResponse);

    rpc Ping (google.protobuf.Empty) returns (PingResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1; 
    bool found = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
    optional int32 ttl = 3;
}

message SetResponse {
    bool success = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
}

message PingResponse {
    string pong = 1;
}